--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</ul>
 			</nav>
 
-			<button id="menu-btn" class="menu-btn" aria-expanded="false" aria-controls="menu" aria-label="Open navigation menu">
+			<button id="menu-btn" class="menu-btn" aria-expanded="false" aria-controls="menu" aria-label="Open menu">
 				<img 
 					src="assets/bars.svg"
 					alt="bars icon"
@@ -47,7 +47,7 @@
 		<main>
 			<section class="content">
 				<div class="width-container">
-					<div class="column column-1">
+					<div>
 						<p class="section-subtitle">Example Subtitle</p>
 						<h2 class="section-title">Content & Image</h2>
 						<p class="content-container">Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla. Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
@@ -56,7 +56,7 @@
 						</div>
 					</div>
 
-					<div class="column column-2">
+					<div>
 						<img
 							src="assets/image.jpg"
 							srcset="assets/image-mobile.jpg 600w, assets/image.jpg 800w, assets/image@2x.jpg 1600w"
@@ -65,7 +65,6 @@
 							loading="lazy"
 							width="800"
 							height="600"
-							class="content-image"
 						>
 					</div>
 				</div>
@@ -88,7 +87,7 @@
 							<label for="email" class="visually-hidden">Email</label>
 							<input type="email" id="email" name="email" placeholder="Email" required autocomplete="email">
 						</div>
-						<button type="submit" class="btn btn-submit">Submit</button>
+						<button type="submit" class="btn-submit">Submit</button>
 					</form>
 				</div>
 			</section>
