enhance accessibility. improve styling for sections and forms

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 		</header>
 
 		<main>
-			<section class="content">
+			<section class="content" aria-labelledby="content-heading">
 				<div class="width-container">
 					<div>
 						<p class="section-subtitle">Example Subtitle</p>
-						<h2 class="section-title">Content & Image</h2>
+						<h1 id="content-heading" class="section-title">Content & Image</h1>
 						<p class="content-container">Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla. Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
 						<div class="btn-wrapper">
 							<a href="#" class="btn">Example CTA</a>
@@ -70,11 +70,11 @@
 				</div>
 			</section>
 
-			<section class="form-section">
+			<section class="form-section" aria-labelledby="form-heading">
 				<div class="width-container">
 					<div class="header-wrapper">
 						<p class="section-subtitle">Example Subtitle</p>
-						<h2 class="section-title">Full Width Form</h2>
+						<h1 id="form-heading" class="section-title">Full Width Form</h1>
 						<p class="content-container">Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
 					</div>
 
